<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/rc_default">

    <ImageView
        android:id="@+id/iv_giticon"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_github" />

    <TextView
        android:id="@+id/tv_gitusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gerbera_light"
        android:padding="2.5dp"
        android:text="@string/myGit"
        android:textColor="@color/rc_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/iv_giticon"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/textlogo_layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_giticon">


        <TextView
            android:id="@+id/tv_logo_russian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/gerbera_bold"
            android:paddingTop="1dp"
            android:paddingBottom="0dp"
            android:text="@string/russianCaps"
            android:textColor="@color/gray_dark"
            android:textSize="28pt" />

        <TextView
            android:id="@+id/tv_logo_checkers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/gerbera_light"
            android:letterSpacing="0.3"
            android:text="@string/russianGame"
            android:textColor="@color/gray_dark"
            android:textSize="24sp"
            android:translationY="-4dp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/iv_crown"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:alpha="0.8"
        android:contentDescription="@string/todo"
        android:translationX="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        app:srcCompat="@drawable/rs_crown" />


    <LinearLayout
        android:id="@+id/llv_btndock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent">


        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="85"
            android:background="@drawable/rc_blue_btn"
            android:fontFamily="@font/gerbera_light"
            android:letterSpacing="0.12"
            android:text="@string/play"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="8pt" />


        <Button
            android:id="@+id/btn_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rc_white_btn"
            android:fontFamily="@font/gerbera_light"
            android:letterSpacing="0.12"
            android:text="@string/game_rules"
            android:textAlignment="center"
            android:textColor="@color/grad_blue_end"
            android:textSize="8pt"
            android:translationY="-4dp" />


        <TextView
            android:id="@+id/tv_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:fontFamily="@font/gerbera_light"
            android:gravity="center"
            android:text="@string/info"
            android:textColor="@color/rc_blue"
            android:textSize="8pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>