<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/game_counter_second"
    android:layout_width="390dp"
    android:layout_height="74dp"
    android:background="@drawable/game_counter"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/game_counter_first">


    <!-- PLAYER 1 SCORE  -->
    <LinearLayout
        android:id="@+id/counter_score_layout1"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/score_counter_info"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="14dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/rc_figure_blue" />

        <TextView
            android:id="@+id/counter_score_player1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1pt"
            android:fontFamily="@font/gerbera_light"
            android:gravity="center_vertical"
            android:text="@string/ten"
            android:textColor="@color/gray_medium"
            android:textSize="14pt" />

    </LinearLayout>


    <!-- TEXT & PLAYER NAMES -->
    <LinearLayout
        android:id="@+id/score_counter_info"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/gerbera_light"
            android:gravity="center"
            android:letterSpacing="0.12"
            android:text="@string/score"
            android:textColor="@color/rc_blue"
            android:textSize="20sp" />

    </LinearLayout>


    <!-- PLAYER 2 SCORE -->
    <LinearLayout
        android:id="@+id/counter_score_layout2"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_weight="4"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/score_counter_info">

        <TextView
            android:id="@+id/counter_score_player2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="1pt"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/gerbera_light"
            android:gravity="center_vertical"
            android:text="@string/ten"
            android:textColor="@color/gray_medium"
            android:textSize="14pt" />

        <ImageView
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/rc_figure_orange" />

    </LinearLayout>

</LinearLayout>