<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".GameMode" >

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:background="@color/white"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:orientation="vertical"
        android:gravity="center_vertical">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/toolbar_layout"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/tb_king1"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:alpha="0.8"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_king_orange256"
                app:layout_constraintStart_toStartOf="@+id/toolbar_layout"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout" />

            <ImageView
                android:id="@+id/tb_king2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:alpha="0.8"
                android:contentDescription="@string/todo"
                android:translationX="-3dp"
                app:srcCompat="@drawable/ic_king_blue256"
                app:layout_constraintStart_toEndOf="@+id/tb_king1"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/toolbar_labels_layout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toEndOf="@id/tb_king2"
                app:layout_constraintTop_toTopOf="@+id/toolbar_layout">


                <TextView
                    android:id="@+id/tb_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gerbera_light"
                    android:text="@string/tb_action_gamemode"
                    android:textColor="@color/rc_blue"
                    android:textSize="8pt"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tb_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gerbera_bold"
                    android:text="@string/tb_label_gamemode"
                    android:textColor="@color/gray_dark"
                    android:textSize="15pt"
                    android:translationY="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp" />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

        <View style="@style/Divider" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>